--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -4,9 +4,128 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume</title>
 </head>
 <body>
+    <header>
+        <span><a href="#education">Education</a></span>
+        <span><a href="#skills">Skills</a></span>
+        <span><a href="#achievements">Achievements</a></span>
+        <span><a href="#projects">Projects</a></span>
+        <span><a href="#faqs">FAQs</a></span>
+    </header>
+    <div>
+        <h1>Shiv Chauhan</h1>
+        <p>Contact: <a href="mailto:shivchauhan795@gmail.com">shivchauhan795@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/shivchauhan795">shivchauhan795</a></p>
+        <p>Github: <a href="https://github.com/shivchauhan795">shivchauhan795</a></p>
     
+    <table>
+        <tr>
+            <td><img src="2002633_Shiv Chauhan.JPG" alt="Shiv Chauhan Pic"></td>
+            <td>A highly driven and collaborative individual with 
+                exceptional conflict resolution skills. Proficient 
+                in time management and a quick learner with a 
+                flair for innovative thinking. Eager to tackle 
+                challenging tasks and contribute to the 
+                community through expertise in computer 
+                science and engineering.</td>
+        </tr>
+    </table>
+
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li>Bachelors of Technology in Computer Science And Engineering | 
+                Chandigarh Group of Colleges, Landran</li>
+            <li>Intermediate (CBSE) | Police DAV Public School, Ambala City
+            </li>
+        </ul>
+
+    </section>
+
+    <section id="skills">
+        <h2>
+            Skills
+        </h2>
+        <ul>
+            <li>C++</li>
+            <li>Java</li>
+            <li>C</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>SQL</li>
+        </ul>
+    </section>
+
+    <section id="achievements">
+        <h2>Achievements</h2>
+        <ul>
+            <li>Published a Research Paper in CGC International Journal of 
+                Contemporary Technology and Research on July 2022</li>
+            <li>One of the 5 students from a batch of more than 500 
+                students selected for the JP Morgan Code for Good 2022 
+                Hackathon.
+                </li>
+        </ul>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <h3>CSE Notes | Developer</h3>
+                <p>Duration – 1 Month</p>
+                <p>Environment - Android</p>
+                <p>Languages/Database - Core Java</p>
+                <p>Team Size - Individual</p>
+                <ul>
+                    <li>It is a notes application developed for CSE students where 
+                        they can find quality notes</li>
+                    <li>It has a beautiful UI Design which is designed by XML and is 
+                        tested.</li>
+                    <li>Core Java and Android concepts are used to provide a 
+                        seamless experience to the user</li>
+                </ul>
+            </li>
+            <li>
+                <h3>CGC Library | Developer</h3>
+                <p>Duration – 1 Month</p>
+                <p>Environment - Android</p>
+                <p>Languages/Database - Core Java</p>
+                <p>Team Size - 2</p>
+                <ul>
+                    <li>Database helps to take a record of the Books Issued by any 
+                        student.</li>
+                    <li>Gives a fine idea of which book is available sitting far away
+                        from the library.</li>
+                    <li>Also have some alluring features like the Deadline and 
+                        Availability Notification features.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section id="faqs">
+        <h2>Frequently Asked Questions:</h2>
+        <details>
+            <summary>What OS are you familiar with?</summary>
+            <p>Windows, macOS, Linux</p>
+        </details>
+        <details>
+            <summary>What are your hobbies?</summary>
+            <p>Making YouTube Videos and Watching Podcasts
+            </p>
+        </details>
+        <details>
+            <summary>Languages Known?</summary>
+            <p>English, Hindi, Punjabi</p>
+        </details>
+    </section>
+
+    <footer>&#169; 2023 Shiv Chauhan. All Rights Reserved.</footer>
+
+</div>
 </body>
 </html>
